syntax = "proto3";

package storage;

option go_package = "internal/storage/protocol";

service StorageNode {
  rpc Store(StoreRequest) returns (StoreResponse);
  rpc Retrieve(RetrieveRequest) returns (RetrieveResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message StoreRequest {
  string bucket = 1;
  string key = 2;
  bytes data = 3;
}

message StoreResponse {
  bool success = 1;
  string error = 2;
}

message RetrieveRequest {
  string bucket = 1;
  string key = 2;
}

message RetrieveResponse {
  bytes data = 1;
  bool found = 2;
  string error = 3;
}

message DeleteRequest {
  string bucket = 1;
  string key = 2;
}

message DeleteResponse {
  bool success = 1;
  string error = 2;
}
